--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,11 @@
-@(message: String)
+@(hackers: Seq[Hacker])
 
-@main("Welcome to Play") {
+@main("Listing") {
 
-    @play20.welcome(message)
+  <ul>
+    @for(hacker <- hackers) {
+      <li>@hacker.name</li>
+    }
+  </ul>
 
 }
