--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,6 +10,10 @@
     @for(hacker <- hackers) {
       @defining(projects.find(_.team.contains(hacker.oid))) { maybeProject =>
         <li>
+          @for(pictureURL <- hacker.profile.picture) {
+            <img src="@pictureURL" alt="Picture of @hacker.name"
+                 style="width:50px;height:50px;border-radius:5px" />
+          }
           @hacker.name
           @maybeProject match {
             case Some(project) => {
