--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,6 +13,7 @@
 
         @content
 
+        <script src="@routes.Assets.at("javascripts/vendors/abyssa-with-deps.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/vendors/react.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/vendors/JSXTransformer.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/app.js")" type="text/jsx"></script>
