--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,13 +9,15 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
     </head>
     <body>
-        <div id="title"></div>
-
         @content
 
+        <script src="@routes.Assets.at("javascripts/vendors/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/vendors/onepage-scroll.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/vendors/abyssa-with-deps.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/vendors/qajax.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/vendors/react.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/vendors/JSXTransformer.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/app.js")" type="text/jsx"></script>
+        <script src="@routes.Assets.at("javascripts/formProject.js")" type="text/jsx"></script>
     </body>
 </html>
