Put back header

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,6 +6,12 @@
 
 @main("Listing") {
 
+  <header>
+    <h1>HACKINDER</h1>
+    <h2>Hackday s03e04</h2>
+    <h3>25 avril 2014</h3>
+  </header>
+
   <div class="main">
     <section id="new-project"></section>
 
