--- a/app/views/staticP.scala.html
+++ b/app/views/staticP.scala.html
@@ -1,16 +1,21 @@
 <div class="notification participation-1">
-  <p>Veux-tu participer au prochain Hackday ?</p>
-  <a href="">OUI</a>
-  <a href="">non</a>
+	<div class="wrapper">
+		<h1>Veux-tu participer au prochain Hackday ?</h1>
+		<p>Une petite réponse avant mercredi 23 avril et on serait ravi !</p>
+		<a href="">OUI</a>
+		<a href="">non</a>
+	</div>
 </div>
 
 <div class="notification participation-2">
-	<p>Très heureux de te compter parmi nous :-)</p>
-	<form>
-		<label>Qu'est-ce que tu voudrais faire ?</label>
-		<input type="text" placeholder="arduino, fun, café ..."/>
-		<input type="submit" value="GO"/>
-	</form>
+	<div class="wrapper">
+		<h1>Très heureux de te compter parmi nous :-)</h1>
+		<form>
+			<label>Qu'est-ce que tu voudrais faire ?</label>
+			<input type="text" placeholder="arduino, fun, café ..."/>
+			<input type="submit" value="GO"/>
+		</form>
+	</div>
 </div>
 
 <div class="notification invitation">
@@ -37,6 +42,15 @@
 </div>
 
 <div class="projects">
+
+	<div class="project mine">
+
+
+
+
+	</div>
+
+
 	<div class="project">
 		<h1>Titre du projet</h1>
 		<h2>Motivation phrase</h2>
