awesome style with sexy polygons

--- a/app/assets/stylesheets/_mixins.less
+++ b/app/assets/stylesheets/_mixins.less
@@ -58,6 +58,11 @@
 
 // ******************* MIXINS ***********************
 
+.clip-path(@arg){
+  -webkit-clip-path: @arg;
+
+}
+
 .position(@top, @right, @bottom, @left){
   top: @top;
   right: @right;
