--- a/app/views/staticP.scala.html
+++ b/app/views/staticP.scala.html
@@ -1,9 +1,14 @@
+@main("Listing") {
+
 <div class="notification participation-1">
 	<div class="wrapper">
 		<h1>Veux-tu participer au prochain Hackday ?</h1>
-		<p>Une petite réponse avant mercredi 23 avril et on serait ravi !</p>
-		<a href="">OUI</a>
-		<a href="">non</a>
+		<p class="details">Une petite réponse avant mercredi 23 avril et on serait ravi !</p>
+		<div class="buttons">
+			<a href="" class="button polygon">oh que oui !</a>
+			<a href="">non</a>
+		</div>
+
 	</div>
 </div>
 
@@ -78,3 +83,5 @@
 		<a href="">JE VEUX EN ÊTRE !!</a>
 	</div>
 </div>
+
+}
