encore plus de styles

--- a/app/assets/stylesheets/_mixins.less
+++ b/app/assets/stylesheets/_mixins.less
@@ -60,7 +60,8 @@
 
 .clip-path(@arg){
   -webkit-clip-path: @arg;
-
+  -moz-clip-path: @arg;
+  clip-path: @arg;
 }
 
 .position(@top, @right, @bottom, @left){
