--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -94,22 +94,69 @@ header{
 	background: @black;
 	text-align: center;
 	padding: 40px 0px;
+	border-bottom: solid 2px @lightpink;
 	h1{
-		color: @whitepink;
+		color: fadeout(@whitepink, 10%);
 		font-size: 36px;
 		line-height: 40px;
 		font-weight: 300;
-		margin-bottom: 10px;
+		margin-bottom: 20px;
 	}
-	p.details{
-		color: #FFF;
+	.details{
+		color: fadeout(#FFF, 20%);
 		font-size: 14px;
 		line-height: 20px;
 		font-weight: 400;
 		margin-bottom: 20px;
 	}
 	.buttons{
-		height: 300px;
+		padding: 30px 0px;
+		a.link{
+			line-height: 75px;
+			color: @whitepink;
+		}
+		.polygon{
+			margin-right: 30px;
+		}
+	}
+}
+
+.notification.participation-2{
+	text-align: center;
+	form{
+		.column(6);
+		.push(3);
+		.pull(3);
+		margin-bottom: 20px;
+	}
+	label, input[type="text"]{
+		width: 100%;
+	}
+	input[type="text"]{
+		font-size: 14px;
+		background: transparent;
+		border: solid 1px fadeout(@whitepink, 20%);
+		color: @whitepink;
+		padding: 10px;
+		margin: 10px 0px;
+		&:focus{
+			outline: none;
+			border-color: @pink;
+		}
+	}
+	input[type="submit"]{
+		display: inline-block;
+	}
+}
+
+.notification.invitation{
+	p{
+		.column(6);
+		color: @whitepink;
+	}
+	.buttons{
+		.column(6);
+		padding: 0px;
 	}
 }
 
@@ -122,13 +169,15 @@ header{
 	display: inline-block;
 	text-align: center;
 	vertical-align: middle;
-	padding: 0px 15px;
+	padding: 0px 25px;
+	border: none;
+	cursor: pointer;
 	.nolinkstyle;
 	color: #FFF;
 	.transition(all 0.2s ease);
 	&.polygon{
-		height: 60px;
-		line-height: 60px;
+		height: 70px;
+		line-height: 75px;
 		.clip-path(polygon(40% 10%, 100% 38%, 75% 100%, 19% 90%, 0 38%));
 	}
 	&:hover{
