--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -121,7 +121,7 @@ header{
 	}
 }
 
-.notification.participation-2{
+.notification .participation-2{
 	text-align: center;
 	form{
 		.column(6);
@@ -149,7 +149,7 @@ header{
 	}
 }
 
-.notification.invitation{
+.notification .invitation{
 	p{
 		.column(6);
 		color: @whitepink;
@@ -157,6 +157,60 @@ header{
 	.buttons{
 		.column(6);
 		padding: 0px;
+	}
+}
+
+.project{
+	text-align: center;
+	padding-top: 40px;
+	background: @black;
+	color: #FFF;
+	h1{
+		font-size: 38px;
+		font-weight: 300;
+		margin-bottom: 30px;
+	}
+	h2{
+		font-size: 22px;
+		font-weight: 400;
+		margin-bottom: 20px;
+	}
+	p.description{
+		font-size: 14px;
+		width: 400px;
+		margin: 0 auto;
+	}
+	.button{
+		margin-top: 50px;
+	}
+	.team{
+		margin-top: 50px;
+		li{
+			display: inline-block;
+			margin-right: 20px;
+			img{
+				height: 120px;
+				.clip-path(polygon(40% 10%, 100% 38%, 75% 100%, 19% 90%, 0 38%));
+			}
+			&:nth-of-type(1) img{
+				.clip-path(polygon(55% 0, 100% 25%, 92% 78%, 40% 90%, 0% 65%, 13% 22%));
+			}
+			&:nth-of-type(2) img{
+				.clip-path(polygon(45% 0%, 100% 15%, 100% 75%, 72% 90%, 10% 80%, 0% 35%, 6% 3%));
+			}
+
+		}
+
+	}
+}
+.project.mine{
+	.gradient-vertical(#f990ab, 0%, #e46a89, 100%);
+	overflow: hidden;
+	.team{
+		margin-bottom: -40px;
+		img{
+			height: 150px;
+		}
 	}
 }
 
