début de style pour les hackers

--- a/app/views/staticP.scala.html
+++ b/app/views/staticP.scala.html
@@ -93,8 +93,32 @@
 				<img src="https://lh4.googleusercontent.com/-KDbb2ZFfGJc/U0JtqjMFqAI/AAAAAAAAAgA/e4kDiVYRUCM/w918-h920-no/4352048618240954346-MIX.jpg"/>
 			</li>
 		</ul>
+	</div>
 
+	<div class="hackers">
+		<div class="wrapper">
+			<ul>
+				<li>
+					<a href="">
+						<img src="https://lh4.googleusercontent.com/-KDbb2ZFfGJc/U0JtqjMFqAI/AAAAAAAAAgA/e4kDiVYRUCM/w918-h920-no/4352048618240954346-MIX.jpg"/>
+						<span> inviter </span>
+					</a>
 
+				</li>
+				<li>
+					<a href="">
+						<img src="https://lh4.googleusercontent.com/-KDbb2ZFfGJc/U0JtqjMFqAI/AAAAAAAAAgA/e4kDiVYRUCM/w918-h920-no/4352048618240954346-MIX.jpg"/>
+						<span> inviter </span>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://lh4.googleusercontent.com/-KDbb2ZFfGJc/U0JtqjMFqAI/AAAAAAAAAgA/e4kDiVYRUCM/w918-h920-no/4352048618240954346-MIX.jpg"/>
+						<span> inviter </span>
+					</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 </div>
 
