--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -50,6 +50,14 @@ body{
 	font: 400 ~"14px/18px" @open;
 }
 
+.clip-path-1{
+	.clip-path(polygon(55% 0, 100% 25%, 92% 78%, 40% 90%, 0% 65%, 13% 22%));
+}
+.clip-path-2{
+	.clip-path(polygon(45% 0%, 100% 15%, 100% 75%, 72% 90%, 10% 80%, 0% 35%, 6% 3%));
+
+}
+
 
 // *********************** LAYOUT ************
 
@@ -112,7 +120,7 @@ header{
 .notification{
 	background: @black;
 	text-align: center;
-	padding: 40px 0px;
+	padding: 50px 0px;
 	border-bottom: solid 2px @lightpink;
 	h1{
 		color: fadeout(@whitepink, 10%);
@@ -185,7 +193,7 @@ header{
 
 .project{
 	text-align: center;
-	padding-top: 40px;
+	padding: 50px 0px;
 	background: @black;
 	color: #FFF;
 	h1{
@@ -213,15 +221,9 @@ header{
 			margin-right: 20px;
 			img{
 				height: 120px;
-				.clip-path(polygon(40% 10%, 100% 38%, 75% 100%, 19% 90%, 0 38%));
 			}
-			&:nth-of-type(1) img{
-				.clip-path(polygon(55% 0, 100% 25%, 92% 78%, 40% 90%, 0% 65%, 13% 22%));
-			}
-			&:nth-of-type(2) img{
-				.clip-path(polygon(45% 0%, 100% 15%, 100% 75%, 72% 90%, 10% 80%, 0% 35%, 6% 3%));
-			}
-
+			&:nth-of-type(odd) img{ .clip-path-1;}
+			&:nth-of-type(even) img{ .clip-path-2;}
 		}
 
 	}
@@ -230,11 +232,45 @@ header{
 	.gradient-vertical(#f990ab, 0%, #e46a89, 100%);
 	overflow: hidden;
 	.team{
-		margin-bottom: -40px;
+		margin-bottom: -90px;
 		img{
 			height: 150px;
 		}
 	}
+}
+
+.hackers{
+	margin-bottom: 200px;
+	.gradient-vertical(#f990ab, 0%, #e46a89, 100%);
+	li{
+		position: relative;
+		display: inline-block;
+		&:nth-of-type(odd){ .clip-path-1;}
+		&:nth-of-type(even){ .clip-path-2;}
+		background: @black;
+		a{
+			background: @black;
+			width: 100%;
+			height: 100%;
+			img{
+				height: 90px;
+			}
+
+			span{
+				position: absolute;
+				top: 50%;
+				text-align: center;
+				width: 100%;
+			}
+		}
+		&:hover{
+			img{
+				opacity: 0.8;
+			}
+		}
+
+	}
+
 }
 
 
